--- a/.classpath
+++ b/.classpath
@@ -36,5 +36,6 @@
 	<classpathentry kind="lib" path="lib/deps/json-20140107.jar"/>
 	<classpathentry kind="lib" path="test-libs/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="test-libs/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="test-libs/mockito-all-1.9.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
