--- a/build.xml
+++ b/build.xml
@@ -42,6 +42,7 @@
 	<path id="classpath.test">
 		<pathelement location="test-libs/junit-4.11.jar"/>
 		<pathelement location="test-libs/hamcrest-core-1.3.jar"/>
+		<pathelement location="test-libs/mockito-all-1.9.5.jar"/>
 		<pathelement location="${dest.dir}"/>
 	</path>
 
@@ -132,7 +133,7 @@
 	        </classpath>
 	        <formatter type="brief" usefile="false" />
 	        <batchtest>
-	            <fileset dir="${test.src.dir}" includes="**/*Test.java" />
+	            <fileset dir="${test.src.dir}" includes="**/*Test*.java" />
 	        </batchtest>
 	    </junit>
 	  </target>
