--- a/build.xml
+++ b/build.xml
@@ -41,6 +41,7 @@
 		<pathelement location="test-libs/junit-4.11.jar"/>
 		<pathelement location="test-libs/hamcrest-core-1.3.jar"/>
 		<pathelement location="test-libs/mockito-all-1.9.5.jar"/>
+		<fileset dir="${jar.dir}" includes="deps/*.jar" />
 		<pathelement location="${dest.dir}"/>
 	</path>
 
@@ -52,7 +53,8 @@
 		<echo message=""/>
 		<echo message="	all							clean compile"/>
 		<echo message="	clean						Clean everything"/>
-		<echo message="	compile					Compile all classes and create jarfile (default)"/>
+		<echo message="	compile					Compile all classes and create jarfile"/>
+		<echo message="	test					Compile all classes and run unit tests (default)"/>
 		<echo message="	launcher				 Create Windows scoreboard.exe"/>
 		<echo message="	manifest				 (Re)create the manifest file"/>
 		<echo message="	help						 Show this help"/>
@@ -164,7 +166,7 @@
 	</target>
 
 	<!-- Do everything -->
-	<target name="all" depends="clean,compile"/>
+	<target name="all" depends="clean,test"/>
 
 	<!-- Create Windows scoreboard.exe -->
 	<taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" classpath="${launch4j.dir}/launch4j.jar:${launch4j.dir}/lib/xstream.jar" />
